# game

./: .gitignore  README.md  flake.nix  main.py  pyproject.toml
src/: config.py
src/ai/: astar.py  bt_actions.py  bt_chase.py  bt_composites.py  bt_node.py
src/audio/: sound_manager.py
src/controllers/: game_controller.py
src/game/ai/: astar.py  bt_actions.py  bt_chase.py  bt_composites.py  pathfinding_grid.py
src/game/audio/: sound_manager.py
src/game/controllers/: game_controller.py
src/game/maps/: test_level.txt
src/game/models/: enemy.py  flashlight.py  health.py  player.py  wall.py
src/game/rendering/: lightmap.py  renderer.py
src/game/states/: game_state.py  main_menu_state.py
src/game/systems/: genetic_algorithm.py  genome.py  level.py  map_loader.py  object_pool.py  uniform_grid.py  vision_cone.py
src/maps/: test_level.txt
src/models/: enemy.py  flare.py  flashlight.py  pickup.py  player.py  trapdoor.py
src/rendering/: lightmap.py  renderer.py
src/states/: main_menu_state.py
src/systems/: genetic_algorithm.py  genome.py  level.py  map_loader.py  object_pool.py  raycast.py  text_renderer.py
tests/: test_astar.py  test_genetic_algorithm.py  test_uniform_grid.py
